--- a/server/poster/screen.less
+++ b/server/poster/screen.less
@@ -44,7 +44,7 @@ sup {
   display:block;
 }
 .bigtext {
-  font-family:"48GROUP";
+  font-family:"48GROUPÉ";
   text-transform:uppercase;
   color:white;
 }
