--- a/server/poster/screen.less
+++ b/server/poster/screen.less
@@ -10,9 +10,12 @@ body {
   width:100%;
   height:100%;
   
+  width:2970px;
+  height:4200px;
+  
   font-size:12px;
 
-  overflow:hidden;
+  //overflow:hidden;
   
   ol {
     width:100%;
@@ -44,7 +47,7 @@ sup {
   display:block;
 }
 .bigtext {
-  font-family:"48GROUPÉ";
+  font-family:"48GROUP";
   text-transform:uppercase;
   color:white;
 }
