--- a/server/poster/screen.less
+++ b/server/poster/screen.less
@@ -11,11 +11,11 @@ body {
   height:100%;
   
   width:2970px;
-  height:4200px;
+  height:4185px;
   
   font-size:12px;
 
-  //overflow:hidden;
+  overflow:hidden;
   
   ol {
     width:100%;
@@ -37,11 +37,12 @@ body {
 }
 sup {
   background-color:black;
-  color:#cccccc/2;
+  color:#cccccc/1.5;
   
-  font-size:8px;
+  font-size:18px;
   font-family:Monaco;
   
+  height:0px;
   position: relative;
   top:100%;
   display:block;
