--- a/server/poster/css/screen.css
+++ b/server/poster/css/screen.css
@@ -8,8 +8,9 @@ body {
   width: 100%;
   height: 100%;
   width: 2970px;
-  height: 4200px;
+  height: 4185px;
   font-size: 12px;
+  overflow: hidden;
 }
 body ol {
   width: 100%;
