--- a/server/poster/screen.less
+++ b/server/poster/screen.less
@@ -2,8 +2,19 @@
   margin:0;
   padding:0;
 }
+@import "../font/stylesheet.css";
 
 body {
+  &.refresh {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH"; 
+  }
+
+  
   background-color:#202020;
   background-color:black;
   
@@ -31,24 +42,26 @@ body {
       background-repeat:no-repeat;
       background-position:center;
       
-      p {margin:8%;}
+      p{
+        padding:10%;
+      }
     }
   }
 }
 sup {
   background-color:black;
-  color:#cccccc/1.5;
+  color:#fff;
   
-  font-size:18px;
+  font-size:20px;
   font-family:Monaco;
   
   height:0px;
   position: relative;
-  top:100%;
+  top:98%;
   display:block;
 }
 .bigtext {
-  font-family:"48GROUP";
+	font-family: '48groupregular';
   text-transform:uppercase;
   color:white;
 }
