--- a/server/poster/css/screen.css
+++ b/server/poster/css/screen.css
@@ -4,41 +4,31 @@
   padding: 0;
 }
 body {
-  background-color: #202020;
-  background-color: black;
   width: 100%;
   height: 100%;
-  width: 2970px;
-  height: 4185px;
   font-size: 12px;
   overflow: hidden;
 }
-body.refresh {
-  -moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  filter: FlipH;
-  -ms-filter: "FlipH";
-}
-body ol {
+body #grid-container {
   width: 100%;
   height: 100%;
 }
-body ol li {
-  width: 16.666666666666668%;
-  height: 16.666666666666668%;
-  float: left;
-  text-align: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+body #grid-container .grid-item {
+  position: absolute;
+  overflow: hidden;
+  list-style: none;
 }
-body ol li p {
+body #grid-container .grid-item.image img {
+  width: 100%;
+}
+body #grid-container .grid-item.md p {
   padding: 10%;
+  text-align: center;
+}
+body #grid-container .grid-item.outside {
+  display: none;
 }
 sup {
-  background-color: black;
   color: #fff;
   font-size: 20px;
   font-family: Monaco;
@@ -50,10 +40,4 @@ sup {
 .bigtext {
   font-family: '48groupregular';
   text-transform: uppercase;
-  color: white;
 }
-pre{
-  background-color: #fff;
-  color:#000;
-}
-
