--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -15,12 +15,19 @@ body {
   // }
 
   
+  // width:2970px;
+  // height:4185px;
+
+  width:297mm;
+  height:420mm;
+  
+  &.refresh{
+    
   width:100%;
   height:100%;
   
-  // width:2970px;
-  // height:4185px;
-  
+  }
+
   font-size:12px;
 
   overflow:hidden;
@@ -50,7 +57,7 @@ body {
         &.outside{
           display:none;
         }
-        
+
     }
   }
 }
