--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -22,7 +22,7 @@ body {
   height:420mm;
   
   &.refresh{
-    
+
   width:100%;
   height:100%;
   
@@ -63,7 +63,7 @@ body {
 }
 sup {
   // background-color:black;
-  color:#fff;
+  color:#000;
   
   font-size:20px;
   font-family:Monaco;
