flip screen for live preview

--- a/server/poster/css/screen.css
+++ b/server/poster/css/screen.css
@@ -10,6 +10,14 @@ body {
   overflow: hidden;
 }
 body.refresh {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
+body.refresh {
   width: 100%;
   height: 100%;
 }
