--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -4,15 +4,19 @@
 }
 @import "../font/stylesheet.css";
 
+html{
+  
+}
+
 body {
-  // &.refresh {
-  //   -moz-transform: scaleX(-1);
-  //   -o-transform: scaleX(-1);
-  //   -webkit-transform: scaleX(-1);
-  //   transform: scaleX(-1);
-  //   filter: FlipH;
-  //   -ms-filter: "FlipH"; 
-  // }
+  &.refresh {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH"; 
+  }
 
   
   // width:2970px;
@@ -22,10 +26,8 @@ body {
   height:420mm;
   
   &.refresh{
-
-  width:100%;
-  height:100%;
-  
+    width:100%;
+    height:100%;
   }
 
   font-size:12px;
