--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -9,14 +9,14 @@ html{
 }
 
 body {
-  &.refresh {
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    filter: FlipH;
-    -ms-filter: "FlipH"; 
-  }
+  // &.refresh {
+  //   -moz-transform: scaleX(-1);
+  //   -o-transform: scaleX(-1);
+  //   -webkit-transform: scaleX(-1);
+  //   transform: scaleX(-1);
+  //   filter: FlipH;
+  //   -ms-filter: "FlipH"; 
+  // }
 
   
   // width:2970px;
