--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -1,8 +1,9 @@
 * {
   margin:0;
   padding:0;
-  background: white;
+  // background: white;
 }
+
 @import "../font/stylesheet.css";
 
 html{
@@ -26,7 +27,7 @@ body {
 /*  width:250mm;
   height:400mm; */
   
-  background: #FFFFFF;
+  background: #000;
   &.refresh{
     width:100%;
     height:100%;
@@ -66,19 +67,21 @@ body {
   }
 }
 sup {
-  // background-color:black;
-  color:#000;
+  // background-color:#fff;
+  color:#fff;
   
-  font-size:20px;
+  font-size:9px;
   font-family:Monaco;
   
-  height:0px;
-  position: relative;
-  top:98%;
+  // height:0px;
+  position: absolute;
+  bottom:0;
   display:block;
+  width:100%;
+  z-index:100;
 }
 .bigtext {
 	font-family: '48groupregular';
   text-transform:uppercase;
-  // color:white;
+  color:#fff;
 }
