--- a/server/poster/less/screen.less
+++ b/server/poster/less/screen.less
@@ -27,6 +27,9 @@ body {
 /*  width:250mm;
   height:400mm; */
   
+  width:3508px;
+  height:4961px; 
+  
   background: #000;
   &.refresh{
     width:100%;
